--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
         <div>
           <h1>Cult of the Party Parrot</h1>
         </div>
-       
+
         <table>
           <tr>
             <td><img src="/parrots/hd/parrot.gif" /></td>
@@ -77,6 +77,8 @@
         </table>
 
         <hr/>
+
+        <div class="click-to-play">(click parrot to play animation)</div>
 
         <ul>
           {{#parrots}}
