--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@
 
         <h3>Keyboards!</h3>
         <div class="clearfix keyboards">
-          <a href="https://itunes.apple.com/us/app/cult-of-the-party-parrot/id1169278591?ls=1&mt=8"><img src="/assets/app-store-badge.svg" alt="Download on the App Store" /></a>
+          <a href="https://apps.apple.com/us/app/cult-of-the-party-parrot/id1169278591"><img src="/assets/app-store-badge.svg" alt="Download on the App Store" /></a>
           <a href="https://play.google.com/store/apps/details?id=us.fetch321.partyparrotkeyboard"><img src="/assets/google-play-badge.svg" alt="Download on Google Play" /></a>
         </div>
 
