--- a/templates/index.html
+++ b/templates/index.html
@@ -197,6 +197,7 @@
           <a class="button-small" href="https://github.com/jbaublitz/knock-out">Kernel Module</a>
           <a class="button-small" href="http://www.gtfoparrot.com/">GTFO Parrot</a>
           <a class="button-small" href="https://nathanielw.github.io/party-ify/">Party-ify</a>
+          <a class="button-small" href="https://github.com/AnimeshAgrawal/partyparrot-team">partyparrot-team</a>
         </p>
 
         <hr/>
