Add party-css link
Closes #651

--- a/templates/index.html
+++ b/templates/index.html
@@ -198,6 +198,7 @@
           <a class="button-small" href="http://www.gtfoparrot.com/">GTFO Parrot</a>
           <a class="button-small" href="https://nathanielw.github.io/party-ify/">Party-ify</a>
           <a class="button-small" href="https://github.com/AnimeshAgrawal/partyparrot-team">partyparrot-team</a>
+          <a class="button-small" href="https://github.com/WillMatthews/party-css">party-css</a>
         </p>
 
         <hr/>
