--- a/templates/index.html
+++ b/templates/index.html
@@ -217,7 +217,7 @@
         </p>
 
         <hr/>
-
+        <a href="#wrapper" id="top" title="Jump to top">⬆️</a>
       </article>
 
       <footer>
