Remove duplicate IDs

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
         </ul>
 
         <div id="other_download">
-          <a class="button-small" id="guests_zip" href="/{{files.other-parrots_zip}}">Download</a>
+          <a class="button-small" href="/{{files.other-parrots_zip}}">Download</a>
         </div>
 
         <hr/>
@@ -138,7 +138,7 @@
         </ul>
 
         <div id="other_download">
-          <a class="button-small" id="guests_zip" href="/{{files.guests_zip}}">Download</a>
+          <a class="button-small" href="/{{files.guests_zip}}">Download</a>
         </div>
 
 
