Change duplicate ID into a class

--- a/templates/flags.html
+++ b/templates/flags.html
@@ -66,7 +66,7 @@
           {{/flags}}
         </ul>
 
-        <div id="other_download">
+        <div class="other_download">
           <a class="button-small" id="flags_zip" href="/{{files.flags_zip}}">DOWNLOAD THE FLAG PARROTS</a>
         <a class="button-small" href="/">GET BACK TO THE MAIN PARTY</a>
         </div>
