--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
           {{/otherParrots}}
         </ul>
 
-        <div id="other_download">
+        <div class="other_download">
           <a class="button-small" href="/{{files.other-parrots_zip}}">Download</a>
         </div>
 
@@ -137,7 +137,7 @@
           {{/guests}}
         </ul>
 
-        <div id="other_download">
+        <div class="other_download">
           <a class="button-small" href="/{{files.guests_zip}}">Download</a>
         </div>
 
