Add suitable alt text for decorative images

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,18 +61,18 @@
         <table>
           <tr>
             <td><img src="/parrots/hd/parrot.gif" /></td>
-            <td><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /></td>
-            <td><img src="/parrots/hd/reverseparrot.gif" /></td>
+            <td><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""></td>
+            <td><img src="/parrots/hd/reverseparrot.gif" alt=""></td>
           </tr>
           <tr>
-            <td><img src="/parrots/hd/parrot.gif" /></td>
+            <td><img src="/parrots/hd/parrot.gif" alt=""></td>
             <td><h2>PARTY OR DIE</h2></td>
-            <td><img src="/parrots/hd/reverseparrot.gif" /></td>
+            <td><img src="/parrots/hd/reverseparrot.gif" alt=""></td>
           </tr>
           <tr>
-            <td><img src="/parrots/hd/parrot.gif" /></td>
-            <td><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /><img src="/parrots/hd/middleparrot.gif" /></td>
-            <td><img src="/parrots/hd/reverseparrot.gif" /></td>
+            <td><img src="/parrots/hd/parrot.gif" alt=""></td>
+            <td><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""><img src="/parrots/hd/middleparrot.gif" alt=""></td>
+            <td><img src="/parrots/hd/reverseparrot.gif" alt=""></td>
           </tr>
         </table>
 
@@ -239,7 +239,7 @@
       </article>
 
       <footer>
-        With <img src="/parrots/hd/parrot.gif"> from <a href="https://midwestdevchat.com/">Midwest Dev Chat</a> &amp; <a href="https://github.com/jmhobbs/cultofthepartyparrot.com#thanks">friends</a>
+        With <img src="/parrots/hd/parrot.gif" alt="Lovely dancing parrot"> from <a href="https://midwestdevchat.com/">Midwest Dev Chat</a> &amp; <a href="https://github.com/jmhobbs/cultofthepartyparrot.com#thanks">friends</a>
       </footer>
 
       <script src="{{files.assets__lazy_js}}" defer></script>
